--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                this course is taken by award winning experienced professional trainers , students do not lack any required knowleged after taking this course .they recieve their certificates fully trained to be professionals in their field of training 
               </p>
             </div>
           </div>
@@ -211,7 +211,7 @@
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                this course is taken by award winning experienced professional trainers , students do not lack any required knowleged after taking this course .they recieve their certificates fully trained to be professionals in their field of training 
               </p>
             </div>
           </div>
@@ -233,7 +233,7 @@
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                this course is taken by award winning experienced professional trainers , students do not lack any required knowleged after taking this course .they recieve their certificates fully trained to be professionals in their field of training 
               </p>
             </div>
           </div>
@@ -253,7 +253,7 @@
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                this course is taken by award winning experienced professional trainers , students do not lack any required knowleged after taking this course .they recieve their certificates fully trained to be professionals in their field of training 
               </p>
             </div>
           </div>
@@ -273,7 +273,7 @@
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                this course is taken by award winning experienced professional trainers , students do not lack any required knowleged after taking this course .they recieve their certificates fully trained to be professionals in their field of training 
               </p>
             </div>
           </div>
